tests/test-files/parse-cond.txt
================================================================================
Malformed cond expression
================================================================================

(package test-package)

(define x (cond))

--------------------------------------------------------------------------------

error: Malformed cond expression
  --> test:3:16
   |
 3 |  (define x (cond))
   |                 ^ expected one or more clauses

================================================================================
Malformed cond clause
================================================================================

(package test-package)

(define x (cond 1))

--------------------------------------------------------------------------------

error: Malformed cond clause
  --> test:3:16
   |
 3 |  (define x (cond 1))
   |                  ^ expected list

================================================================================
Malformed cond clause
================================================================================

(package test-package)

(define x (cond (1 2 . 3)))

--------------------------------------------------------------------------------

error: Malformed cond clause
  --> test:3:16
   |
 3 |  (define x (cond (1 2 . 3)))
   |                  ^^^^^^^^^ unexpected dotted list

================================================================================
Malformed function
================================================================================

(package test-package)

(define x (cond (y)))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:19
   |
 3 |  (define x (cond (y)))
   |                    ^ expected body
